pythonparser/pythonParser.py
# Generated from python.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class pythonParser ( Parser ):

    grammarFileName = "python.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'='", "'+='", "'-='", 
                     "'*='", "'/='", "'if'", "'elif'", "'else'", "'while'", 
                     "'for'", "'<'", "'<='", "'>'", "'>='", "'=='", "'!='", 
                     "'and'", "'or'", "'not'", "'['", "']'", "'('", "')'", 
                     "','", "':'", "'range'", "'in'" ]

    symbolicNames = [ "<INVALID>", "COMMENT_SINGLELINE", "COMMENT_TRIPLE_QUOTE", 
                      "COMMENT_SINGLE_TRIPLE_QUOTE", "ADD", "SUB", "MUL", 
                      "DIV", "MOD", "ASSIGN", "ADD_ASSIGN", "SUB_ASSIGN", 
                      "MUL_ASSIGN", "DIV_ASSIGN", "IF", "ELIF", "ELSE", 
                      "WHILE", "FOR", "LT", "LTE", "GT", "GTE", "EQL", "NEQL", 
                      "AND", "OR", "NOT", "LBRACKET", "RBRACKET", "LPAREN", 
                      "RPAREN", "COMMA", "COLON", "RANGE", "IN", "VARIABLE", 
                      "STRING", "NUMBER", "NL", "WS", "INDENT", "DEDENT" ]

    RULE_program = 0
    RULE_body = 1
    RULE_block = 2
    RULE_statement = 3
    RULE_assignment = 4
    RULE_expression = 5
    RULE_if_statement = 6
    RULE_elif_statement = 7
    RULE_else_statement = 8
    RULE_while_loop = 9
    RULE_for_loop = 10
    RULE_iterable = 11
    RULE_condition = 12
    RULE_comparison = 13
    RULE_term = 14
    RULE_factor = 15
    RULE_array = 16

    ruleNames =  [ "program", "body", "block", "statement", "assignment", 
                   "expression", "if_statement", "elif_statement", "else_statement", 
                   "while_loop", "for_loop", "iterable", "condition", "comparison", 
                   "term", "factor", "array" ]

    EOF = Token.EOF
    COMMENT_SINGLELINE=1
    COMMENT_TRIPLE_QUOTE=2
    COMMENT_SINGLE_TRIPLE_QUOTE=3
    ADD=4
    SUB=5
    MUL=6
    DIV=7
    MOD=8
    ASSIGN=9
    ADD_ASSIGN=10
    SUB_ASSIGN=11
    MUL_ASSIGN=12
    DIV_ASSIGN=13
    IF=14
    ELIF=15
    ELSE=16
    WHILE=17
    FOR=18
    LT=19
    LTE=20
    GT=21
    GTE=22
    EQL=23
    NEQL=24
    AND=25
    OR=26
    NOT=27
    LBRACKET=28
    RBRACKET=29
    LPAREN=30
    RPAREN=31
    COMMA=32
    COLON=33
    RANGE=34
    IN=35
    VARIABLE=36
    STRING=37
    NUMBER=38
    NL=39
    WS=40
    INDENT=41
    DEDENT=42

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(pythonParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pythonParser.StatementContext)
            else:
                return self.getTypedRuleContext(pythonParser.StatementContext,i)


        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(pythonParser.NL)
            else:
                return self.getToken(pythonParser.NL, i)

        def getRuleIndex(self):
            return pythonParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = pythonParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 34
                self.statement()
                self.state = 36
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==39:
                    self.state = 35
                    self.match(pythonParser.NL)


                self.state = 40 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 482378924064) != 0)):
                    break

            self.state = 42
            self.match(pythonParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pythonParser.BlockContext)
            else:
                return self.getTypedRuleContext(pythonParser.BlockContext,i)


        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(pythonParser.NL)
            else:
                return self.getToken(pythonParser.NL, i)

        def getRuleIndex(self):
            return pythonParser.RULE_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBody" ):
                listener.enterBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBody" ):
                listener.exitBody(self)




    def body(self):

        localctx = pythonParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 49
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                if la_ == 1:
                    self.state = 44
                    self.block()
                    self.state = 45
                    self.match(pythonParser.NL)
                    pass

                elif la_ == 2:
                    self.state = 47
                    self.match(pythonParser.NL)
                    pass

                elif la_ == 3:
                    self.state = 48
                    self.block()
                    pass


                self.state = 51 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 1032134737952) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(pythonParser.StatementContext,0)


        def getRuleIndex(self):
            return pythonParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = pythonParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(pythonParser.AssignmentContext,0)


        def expression(self):
            return self.getTypedRuleContext(pythonParser.ExpressionContext,0)


        def if_statement(self):
            return self.getTypedRuleContext(pythonParser.If_statementContext,0)


        def while_loop(self):
            return self.getTypedRuleContext(pythonParser.While_loopContext,0)


        def for_loop(self):
            return self.getTypedRuleContext(pythonParser.For_loopContext,0)


        def getRuleIndex(self):
            return pythonParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = pythonParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statement)
        try:
            self.state = 60
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 55
                self.assignment()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 56
                self.expression(0)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 57
                self.if_statement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 58
                self.while_loop()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 59
                self.for_loop()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIABLE(self):
            return self.getToken(pythonParser.VARIABLE, 0)

        def ASSIGN(self):
            return self.getToken(pythonParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(pythonParser.ExpressionContext,0)


        def ADD_ASSIGN(self):
            return self.getToken(pythonParser.ADD_ASSIGN, 0)

        def SUB_ASSIGN(self):
            return self.getToken(pythonParser.SUB_ASSIGN, 0)

        def MUL_ASSIGN(self):
            return self.getToken(pythonParser.MUL_ASSIGN, 0)

        def DIV_ASSIGN(self):
            return self.getToken(pythonParser.DIV_ASSIGN, 0)

        def getRuleIndex(self):
            return pythonParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = pythonParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_assignment)
        try:
            self.state = 77
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 62
                self.match(pythonParser.VARIABLE)
                self.state = 63
                self.match(pythonParser.ASSIGN)
                self.state = 64
                self.expression(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 65
                self.match(pythonParser.VARIABLE)
                self.state = 66
                self.match(pythonParser.ADD_ASSIGN)
                self.state = 67
                self.expression(0)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 68
                self.match(pythonParser.VARIABLE)
                self.state = 69
                self.match(pythonParser.SUB_ASSIGN)
                self.state = 70
                self.expression(0)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 71
                self.match(pythonParser.VARIABLE)
                self.state = 72
                self.match(pythonParser.MUL_ASSIGN)
                self.state = 73
                self.expression(0)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 74
                self.match(pythonParser.VARIABLE)
                self.state = 75
                self.match(pythonParser.DIV_ASSIGN)
                self.state = 76
                self.expression(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SUB(self):
            return self.getToken(pythonParser.SUB, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pythonParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(pythonParser.ExpressionContext,i)


        def LPAREN(self):
            return self.getToken(pythonParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(pythonParser.RPAREN, 0)

        def array(self):
            return self.getTypedRuleContext(pythonParser.ArrayContext,0)


        def STRING(self):
            return self.getToken(pythonParser.STRING, 0)

        def NUMBER(self):
            return self.getToken(pythonParser.NUMBER, 0)

        def VARIABLE(self):
            return self.getToken(pythonParser.VARIABLE, 0)

        def ADD(self):
            return self.getToken(pythonParser.ADD, 0)

        def MUL(self):
            return self.getToken(pythonParser.MUL, 0)

        def DIV(self):
            return self.getToken(pythonParser.DIV, 0)

        def MOD(self):
            return self.getToken(pythonParser.MOD, 0)

        def getRuleIndex(self):
            return pythonParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = pythonParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 10
        self.enterRecursionRule(localctx, 10, self.RULE_expression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5]:
                self.state = 80
                self.match(pythonParser.SUB)
                self.state = 81
                self.expression(11)
                pass
            elif token in [30]:
                self.state = 82
                self.match(pythonParser.LPAREN)
                self.state = 83
                self.expression(0)
                self.state = 84
                self.match(pythonParser.RPAREN)
                pass
            elif token in [28]:
                self.state = 86
                self.array()
                pass
            elif token in [37]:
                self.state = 87
                self.match(pythonParser.STRING)
                pass
            elif token in [38]:
                self.state = 88
                self.match(pythonParser.NUMBER)
                pass
            elif token in [36]:
                self.state = 89
                self.match(pythonParser.VARIABLE)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 109
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 107
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                    if la_ == 1:
                        localctx = pythonParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 92
                        if not self.precpred(self._ctx, 10):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 10)")
                        self.state = 93
                        self.match(pythonParser.ADD)
                        self.state = 94
                        self.expression(11)
                        pass

                    elif la_ == 2:
                        localctx = pythonParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 95
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 96
                        self.match(pythonParser.SUB)
                        self.state = 97
                        self.expression(10)
                        pass

                    elif la_ == 3:
                        localctx = pythonParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 98
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 99
                        self.match(pythonParser.MUL)
                        self.state = 100
                        self.expression(9)
                        pass

                    elif la_ == 4:
                        localctx = pythonParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 101
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 102
                        self.match(pythonParser.DIV)
                        self.state = 103
                        self.expression(8)
                        pass

                    elif la_ == 5:
                        localctx = pythonParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 104
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 105
                        self.match(pythonParser.MOD)
                        self.state = 106
                        self.expression(7)
                        pass

             
                self.state = 111
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class If_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(pythonParser.IF, 0)

        def condition(self):
            return self.getTypedRuleContext(pythonParser.ConditionContext,0)


        def COLON(self):
            return self.getToken(pythonParser.COLON, 0)

        def INDENT(self):
            return self.getToken(pythonParser.INDENT, 0)

        def body(self):
            return self.getTypedRuleContext(pythonParser.BodyContext,0)


        def DEDENT(self):
            return self.getToken(pythonParser.DEDENT, 0)

        def elif_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pythonParser.Elif_statementContext)
            else:
                return self.getTypedRuleContext(pythonParser.Elif_statementContext,i)


        def else_statement(self):
            return self.getTypedRuleContext(pythonParser.Else_statementContext,0)


        def getRuleIndex(self):
            return pythonParser.RULE_if_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_statement" ):
                listener.enterIf_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_statement" ):
                listener.exitIf_statement(self)




    def if_statement(self):

        localctx = pythonParser.If_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_if_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(pythonParser.IF)
            self.state = 113
            self.condition(0)
            self.state = 114
            self.match(pythonParser.COLON)
            self.state = 115
            self.match(pythonParser.INDENT)
            self.state = 116
            self.body()
            self.state = 117
            self.match(pythonParser.DEDENT)
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15:
                self.state = 118
                self.elif_statement()
                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==16:
                self.state = 124
                self.else_statement()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Elif_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELIF(self):
            return self.getToken(pythonParser.ELIF, 0)

        def condition(self):
            return self.getTypedRuleContext(pythonParser.ConditionContext,0)


        def COLON(self):
            return self.getToken(pythonParser.COLON, 0)

        def INDENT(self):
            return self.getToken(pythonParser.INDENT, 0)

        def body(self):
            return self.getTypedRuleContext(pythonParser.BodyContext,0)


        def DEDENT(self):
            return self.getToken(pythonParser.DEDENT, 0)

        def getRuleIndex(self):
            return pythonParser.RULE_elif_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElif_statement" ):
                listener.enterElif_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElif_statement" ):
                listener.exitElif_statement(self)




    def elif_statement(self):

        localctx = pythonParser.Elif_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_elif_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(pythonParser.ELIF)
            self.state = 128
            self.condition(0)
            self.state = 129
            self.match(pythonParser.COLON)
            self.state = 130
            self.match(pythonParser.INDENT)
            self.state = 131
            self.body()
            self.state = 132
            self.match(pythonParser.DEDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Else_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(pythonParser.ELSE, 0)

        def COLON(self):
            return self.getToken(pythonParser.COLON, 0)

        def INDENT(self):
            return self.getToken(pythonParser.INDENT, 0)

        def body(self):
            return self.getTypedRuleContext(pythonParser.BodyContext,0)


        def DEDENT(self):
            return self.getToken(pythonParser.DEDENT, 0)

        def getRuleIndex(self):
            return pythonParser.RULE_else_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElse_statement" ):
                listener.enterElse_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElse_statement" ):
                listener.exitElse_statement(self)




    def else_statement(self):

        localctx = pythonParser.Else_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_else_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(pythonParser.ELSE)
            self.state = 135
            self.match(pythonParser.COLON)
            self.state = 136
            self.match(pythonParser.INDENT)
            self.state = 137
            self.body()
            self.state = 138
            self.match(pythonParser.DEDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class While_loopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(pythonParser.WHILE, 0)

        def condition(self):
            return self.getTypedRuleContext(pythonParser.ConditionContext,0)


        def COLON(self):
            return self.getToken(pythonParser.COLON, 0)

        def INDENT(self):
            return self.getToken(pythonParser.INDENT, 0)

        def body(self):
            return self.getTypedRuleContext(pythonParser.BodyContext,0)


        def DEDENT(self):
            return self.getToken(pythonParser.DEDENT, 0)

        def getRuleIndex(self):
            return pythonParser.RULE_while_loop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile_loop" ):
                listener.enterWhile_loop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile_loop" ):
                listener.exitWhile_loop(self)




    def while_loop(self):

        localctx = pythonParser.While_loopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_while_loop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(pythonParser.WHILE)
            self.state = 141
            self.condition(0)
            self.state = 142
            self.match(pythonParser.COLON)
            self.state = 143
            self.match(pythonParser.INDENT)
            self.state = 144
            self.body()
            self.state = 145
            self.match(pythonParser.DEDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class For_loopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(pythonParser.FOR, 0)

        def VARIABLE(self):
            return self.getToken(pythonParser.VARIABLE, 0)

        def IN(self):
            return self.getToken(pythonParser.IN, 0)

        def iterable(self):
            return self.getTypedRuleContext(pythonParser.IterableContext,0)


        def COLON(self):
            return self.getToken(pythonParser.COLON, 0)

        def INDENT(self):
            return self.getToken(pythonParser.INDENT, 0)

        def body(self):
            return self.getTypedRuleContext(pythonParser.BodyContext,0)


        def DEDENT(self):
            return self.getToken(pythonParser.DEDENT, 0)

        def getRuleIndex(self):
            return pythonParser.RULE_for_loop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor_loop" ):
                listener.enterFor_loop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFor_loop" ):
                listener.exitFor_loop(self)




    def for_loop(self):

        localctx = pythonParser.For_loopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_for_loop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.match(pythonParser.FOR)
            self.state = 148
            self.match(pythonParser.VARIABLE)
            self.state = 149
            self.match(pythonParser.IN)
            self.state = 150
            self.iterable()
            self.state = 151
            self.match(pythonParser.COLON)
            self.state = 152
            self.match(pythonParser.INDENT)
            self.state = 153
            self.body()
            self.state = 154
            self.match(pythonParser.DEDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IterableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RANGE(self):
            return self.getToken(pythonParser.RANGE, 0)

        def LPAREN(self):
            return self.getToken(pythonParser.LPAREN, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pythonParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(pythonParser.ExpressionContext,i)


        def RPAREN(self):
            return self.getToken(pythonParser.RPAREN, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(pythonParser.COMMA)
            else:
                return self.getToken(pythonParser.COMMA, i)

        def array(self):
            return self.getTypedRuleContext(pythonParser.ArrayContext,0)


        def VARIABLE(self):
            return self.getToken(pythonParser.VARIABLE, 0)

        def getRuleIndex(self):
            return pythonParser.RULE_iterable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIterable" ):
                listener.enterIterable(self)
